# rust_line_bot

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
.github/workflows/: cdk.yaml
event_consumer/: Cargo.toml
event_consumer/src/: executor.rs  handler.rs  line.rs  main.rs
event_consumer/src/executor/: parroting.rs
event_consumer/src/line/: messaging_api.rs
event_consumer/src/line/messaging_api/: request.rs
event_consumer/src/line/messaging_api/request/: emoji.rs  event.rs  message.rs  source.rs
event_consumer/src/line/messaging_api/request/event/: message.rs
lib/: apigateway-line-bot-stack.ts  lambda-event-consumer-stack.ts
test/: cdk.test.ts
