[package]
name = "event_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws_lambda_events = "0.15.1"
dotenvy = "0.15.7"
lambda_runtime = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
