[package]
name = "event_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws_lambda_events = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
lambda_runtime = "0.13.0"
log = "0.4.22"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
